[package]
name = "buku_kas"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[profile.release]
# thin LTO: peak RAM saat linking jauh lebih kecil dari fat LTO (`true`),
# hasil optimize hampir sama. Penting biar build gak OOM di server RAM kecil.
lto = "thin"
strip = true
